# agentbench

./: .editorconfig  .gitignore  LICENSE  PRODUCT.md  README.md  ROADMAP.md  action.yml  agentbench.db  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.github/workflows/: agentbench-gate.yml  agentbench-scan-example.yml  agentbench-scan.yml  ci.yml  test.yml
.hermes/plans/: 2026-04-26_043214-agentbench-launch-hardening-plan.md  2026-04-26_044843-agentbench-codebase-readiness-plan.md
action/: action.yml
agentbench/: __init__.py  cli.py  leaderboard.py  updater.py
agentbench/adapters/: __init__.py  autogen.py  base.py  crewai.py  langchain.py  langgraph.py  openai.py  raw_api.py
agentbench/adversarial/: __init__.py  discovery.py  mutator.py  strategies.py
agentbench/cli/: __init__.py  dashboard.py  gate.py  main.py  record.py  replay.py  report.py  scaffold.py
agentbench/core/: __init__.py  assertions.py  config.py  fixtures.py  parametrize.py  runner.py  sandbox.py  test.py
agentbench/dashboard/: __init__.py  app.py
agentbench/dashboard/templates/: index.html
agentbench/evaluation/: __init__.py  judge.py  metrics.py
agentbench/gate/: __init__.py  runner.py
agentbench/http/: __init__.py  client.py
agentbench/multiagent/: __init__.py  assertions.py  patterns.py  roles.py  test.py
agentbench/probes/: __init__.py  base.py  capability.py  consistency.py  registry.py  reliability.py  safety.py  yaml_loader.py
agentbench/probes/builtin/: capability.yaml  consistency.yaml  reliability.yaml  safety.yaml
agentbench/property/: __init__.py  generators.py  properties.py  shrink.py
agentbench/recorder/: __init__.py  recorder.py  workflow.py
agentbench/replayer/: __init__.py  diff.py  replayer.py  report.py
agentbench/scanner/: __init__.py  analyzer.py  baseline.py  generator.py  llm_analyzer.py  prober.py  runner.py  scorer.py  store.py
agentbench/server/: __init__.py  app.py  auth.py  config.py  models.py  schemas.py
agentbench/server/routes/: __init__.py  agents.py  policies.py  projects.py  runs.py  scans.py  trajectories.py
agentbench/storage/: __init__.py  trajectory.py
ci/gate-action/: action.yml
ci/github-action/: Dockerfile  action.yml
ci/gitlab/: .gitlab-ci.yml
docs/: adapters.md  api-reference.md  architecture.md  contributing.md  examples.md  getting-started.md  index.md
docs/integrations/: github-actions.md
docs/plans/: 2026-04-25-blocker-remediation.md  2026-04-25-github-feedback-packaging.md  2026-04-25-production-readiness-roadmap.md  2026-04-25-project-policy-api-spec.md  2026-04-25-teams-first-roadmap.md  2026-04-25-two-week-execution-plan.md  2026-05-03-product-improvements.md
docs/quickstart/: release-gate.md
examples/: agentbench-scan.yml  test_checkout_agent.py
launch/: blog-post.md  product-hunt.md  reddit-posts.md  show-hn.md  x-thread.md
scripts/: agentbench_gate.py
site/: CNAME  README.md  app.html  index.html
tests/: benchmark.py  test_adapters.py  test_adversarial.py  test_analyzer.py  test_baseline.py  test_cli.py  test_core.py  test_dashboard.py  test_evaluation.py  test_gate.py  test_gate_script.py  test_http_client.py  test_leaderboard.py  test_llm_analyzer.py  test_models.py  test_multiagent.py  test_probes.py  test_project_api.py  test_property.py  test_recorder.py  test_replayer.py  test_runner.py  test_scan_api.py  test_scan_jobs_api.py  test_scanner_analyzer.py  test_scanner_cli.py  test_scanner_generator.py  test_scanner_prober.py  test_scorer.py  test_scoring.py  test_server.py  test_server_hardening.py  test_sprint2_cli.py  test_sprint2_core.py  test_storage.py  test_store.py  test_updater.py  test_yaml_loader.py
tests/browser/: project-selection.spec.js  share-flow.spec.js
