[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbench-cli"
version = "0.2.0"
description = "Behavioral testing framework for AI agents — scan any agent URL and get a security & reliability scorecard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AgentBench Team" },
]
keywords = ["ai", "agents", "testing", "evaluation", "llm", "langchain", "crewai", "security", "scanner", "behavioral"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer~=0.24.1",
    "rich~=15.0.0",
    "httpx~=0.28.1",
    "pyyaml~=6.0.3",
]

[project.urls]
Homepage = "https://github.com/EdList/agentbench"
Documentation = "https://github.com/EdList/agentbench#readme"
Repository = "https://github.com/EdList/agentbench"
Issues = "https://github.com/EdList/agentbench/issues"

[project.optional-dependencies]
langchain = ["langchain~=0.1", "langchain-core~=0.1"]
openai = ["openai~=2.31.0"]
anthropic = ["anthropic~=0.94.0"]
docker = ["docker~=7.0"]
watch = ["watchdog~=6.0.0"]
judge = ["openai~=2.31.0", "anthropic~=0.94.0"]
server = ["fastapi~=0.136.1", "uvicorn~=0.46.0", "sqlalchemy~=2.0.49", "pyjwt~=2.12.1"]
all = [
    "langchain~=0.1",
    "langchain-core~=0.1",
    "openai~=2.31.0",
    "anthropic~=0.94.0",
    "docker~=7.0",
]
dev = [
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.1.0",
    "ruff~=0.15.11",
    "mypy~=1.20.2",
    "pre-commit~=4.6.0",
]

[project.scripts]
agentbench = "agentbench.cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"agentbench/scanner/prober.py" = ["E501"]  # probe prompts are inherently long strings

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests requiring external services",
]

[tool.hatch.build.targets.wheel]
packages = ["agentbench"]

[tool.mypy]
python_version = "3.11"
strict = true
