[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbench-cli"
version = "1.0.0"
description = "Paste your agent URL. We'll tell you what's broken."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AgentBench Team" }]
keywords = ["ai", "agents", "testing", "behavioral", "scanner", "safety", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer~=0.24.1",
    "rich~=15.0.0",
    "httpx~=0.28.1",
]

[project.urls]
Homepage = "https://github.com/EdList/agentbench"
Repository = "https://github.com/EdList/agentbench"

[project.scripts]
agentbench = "agentbench.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["agentbench"]
